force-app/main/default/objects/Contact/fields/Marketing_Newsletter__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Newsletter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marketing Newsletter</label>
    <type>Checkbox</type>
</CustomField>