force-app/main/default/objects/Contact/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Any additional information regarding the contact/client</description>
    <label>Notes</label>
    <length>250</length>
    <type>Text</type>
</CustomField>