force-app/main/default/objects/Contact/fields/RTB_RM_Newsletter__c.field-meta.xml
<CustomField>
    <fullName>RTB_RM_Newsletter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RTB &amp; RM Newsletter</label>
    <type>Checkbox</type>
</CustomField>