force-app/main/default/objects/Contact/fields/Sales_Role__c.field-meta.xml
<CustomField>
    <fullName>Sales_Role__c</fullName>
    <label>Contact Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Key Decision Maker</fullName>
                <label>Decision Maker</label>
            </value>
            <value>
                <fullName>Influencer</fullName>
            </value>
            <value>
                <fullName>User</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Media Planner</fullName>
            </value>
            <value>
                <fullName>Trafficker</fullName>
            </value>
            <value>
                <fullName>Partner Product Manager</fullName>
            </value>
            <value>
                <fullName>Partner Developer</fullName>
            </value>
            <value>
                <fullName>Invoicing Person</fullName>
            </value>
            <value>
                <fullName>Signing Person</fullName>
            </value>
            <value>
                <fullName>Specifier</fullName>
            </value>
            <value>
                <fullName>Ratifier</fullName>
            </value>
            <value>
                <fullName>Procurement</fullName>
            </value>
            <value>
                <fullName>Invoice Email To</fullName>
            </value>
            <value>
                <fullName>Invoice Email CC</fullName>
            </value>
            <value>
                <fullName>Reminder Email To</fullName>
            </value>
            <value>
                <fullName>Reminder Email CC</fullName>
            </value>
            <value>
                <fullName>Kayako Integration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>