force-app/main/default/objects/Contact/fields/Send_Relationship_Survey__c.field-meta.xml
<CustomField>
    <fullName>Send_Relationship_Survey__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The field was created to identify who should receive the survey. Requested by Jørgen Christensen</description>
    <label>Send Relationship Survey</label>
    <type>Checkbox</type>
</CustomField>