force-app/main/default/objects/Contact/fields/Trainings_Needed__c.field-meta.xml
<CustomField>
    <fullName>Trainings_Needed__c</fullName>
    <label>Trainings Needed</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TPAS basic training</fullName>
            </value>
            <value>
                <fullName>RTB basic training</fullName>
            </value>
            <value>
                <fullName>RTB optimization</fullName>
            </value>
            <value>
                <fullName>Site-tracking</fullName>
            </value>
            <value>
                <fullName>Reporting</fullName>
            </value>
            <value>
                <fullName>Rich media</fullName>
            </value>
            <value>
                <fullName>HTML5 Studio</fullName>
            </value>
            <value>
                <fullName>Adform Creative Toolkit</fullName>
            </value>
            <value>
                <fullName>Video</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>DCO banners</fullName>
            </value>
            <value>
                <fullName>Dynamic content ads</fullName>
            </value>
            <value>
                <fullName>ABC of programmatic digital media buying</fullName>
            </value>
            <value>
                <fullName>DMP</fullName>
            </value>
            <value>
                <fullName>Adform Support</fullName>
            </value>
            <value>
                <fullName>Tailored Trainings</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>