force-app/main/default/objects/Contact/recordTypes/Strategic_Investors.recordType-meta.xml
<RecordType>
    <fullName>Strategic_Investors</fullName>
    <active>false</active>
    <label>Strategic Investors</label>
</RecordType>