force-app/main/default/objects/Contact/validationRules/Country_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Country_Required</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK( MailingCountry )</errorConditionFormula>
    <errorDisplayField>MailingCountry</errorDisplayField>
    <errorMessage>Mailing Country is required before Contact can be saved.</errorMessage>
</ValidationRule>